samples/_failures_safe/1761378229_0dab1c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cd02e777.c: In function ‘main’:
./samples/SAFE/__tmp_cd02e777.c:147:5: error: expected declaration or statement at end of input
  147 |     if (fgets(input, sizeof(input), stdin) == NULL) {
      |     ^~
./samples/SAFE/__tmp_cd02e777.c:147:5: error: expected declaration or statement at end of input
